# chatwork-cli

./: .env.example  .gitignore  Cargo.toml  LICENSE-APACHE  NOTICE  README.md
.github/workflows/: ci.yml
config/: config.example.toml
config/templates/: follow_up.txt
docs/ja/: README.md
locale/ja/LC_MESSAGES/: chatwork-cli.po
scripts/: build  install
src/: i18n.rs  main.rs  shell_completion.rs
