[package]
name = "chatwork-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A small Chatwork CLI tool built with clap"
repository = "https://github.com/ishii-masaki-646/chatwork-cli"
default-run = "chatwork"

[[bin]]
name = "chatwork"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "multipart", "rustls-tls"] }
rustyline = "15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
